# arikernel

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  RELEASE_NOTES.md  REMEDIATION_SUMMARY.md  SECURITY.md  arikernel-policy.json  biome.json  package.json  pnpm-lock.yaml  start-sidecar.mjs  tsconfig.base.json
.claude/: settings.local.json
benchmarks/: agentdojo-results.md
docs/: agent-reference-monitor.md  attack-simulations.md  benchmark-agentdojo.md  benchmarks.md  compliance-reporting.md  control-plane.md  execution-hardening.md  known-limitations.md  launch-package.md  mcp-integration.md  middleware.md  openclaw-integration.md  production-hardening.md  reference-monitor.md  release-checklist.md  replay.md  roadmap.md  security-evaluation-response.md  security-model.md  security-overview.md  sidecar-mode.md  threat-model.md  trace-replay.md
examples/: autogen-agent.py  autogpt-agent.py  demo-attack.ts  demo-behavioral.ts  demo-capability.ts  demo-escalation.ts  demo-mcp.ts  demo-replay.ts  demo-run-state.ts  demo-security-hardening.ts  demo-sidecar.ts  demo.ts  langchain-agent-firewall.ts  (+6 more)
python/: README.md  pyproject.toml
python/agent_firewall/: __init__.py  client.py  types.py
python/arikernel/: __init__.py  client.py  middleware.py  protect.py  sidecar.py  types.py
python/arikernel/integrations/: __init__.py  autogen.py  autogpt.py
python/arikernel/runtime/: __init__.py  arikernel-policy.json  audit_logger.py  autoscope.py  behavior_rules.py  capability_tokens.py  hash_chain.py  kernel.py  policy_engine.py  run_state.py  spec_loader.py  taint_tracking.py
python/tests/: test_autogen.py  test_autogpt.py  test_integration.py  test_runtime.py  test_sidecar_semantics.py
(+69 files in other folders)
