[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-firewall"
version = "0.1.0"
description = "Python client for Agent Firewall — a runtime security layer for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
