[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arikernel"
version = "0.2.0"
description = "Runtime security layer for AI agents — native Python enforcement"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = []

[project.optional-dependencies]
server = ["httpx>=0.27"]
ulid = ["python-ulid>=3"]
dev = ["pytest>=8", "python-ulid>=3"]

[tool.hatch.build.targets.wheel]
packages = ["arikernel"]
