[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arikernel"
version = "0.1.2"
description = "Runtime security layer for AI agents — native Python enforcement with TypeScript-parity semantics"
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-AriKernel-Source-Available"
dependencies = []

[project.optional-dependencies]
server = ["httpx>=0.27"]
ulid = ["python-ulid>=3"]
dev = ["pytest>=8", "python-ulid>=3"]

[tool.hatch.build.targets.wheel]
packages = ["arikernel"]

[tool.hatch.build.targets.wheel.force-include]
"arikernel/runtime/arikernel-policy.json" = "arikernel/runtime/arikernel-policy.json"

[tool.hatch.build.targets.sdist]
include = ["arikernel/**", "tests/**", "README.md", "pyproject.toml"]
